# cm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  build.rs  flake.nix
.github/workflows/: audit.yml  ci.yml  release.yml
applause/: Cargo.toml
applause/src/: lib.rs
applause_derive/: Cargo.toml
applause_derive/src/: lib.rs
src/: args.rs  cli.rs  cm.rs  main.rs
tests/: tests.rs
tests/cmd/: activate0.stdout  activate0.toml  activate1.stdout  activate1.toml  activate2.stdout  activate2.toml  activate3.stdout  activate3.toml  activate4.stdout  activate4.toml  activate_quirks.stdout  activate_quirks.toml  config_file_empty.stdout  config_file_empty.toml  config_file_global_only.stdout  config_file_missing.stderr  config_file_missing.toml  config_file_subcommand.stdout  config_file_subcommand.toml  configure_enable_projects_multi.stdout  configure_enable_projects_multi.toml  configure_enable_runtimes_multi.stdout  configure_enable_runtimes_multi.toml  configure_in_activate.stdout  configure_in_activate.toml  configure_in_activate_mismatch.stdout  configure_in_activate_mismatch.toml  configure_linker_default.stdout  configure_linker_default.toml  configure_linker_explicit.stdout  configure_linker_explicit.toml  configure_targets_to_build_alt_multi.stdout  configure_targets_to_build_alt_multi.toml  configure_targets_to_build_alt_single.stdout  configure_targets_to_build_alt_single.toml  configure_targets_to_build_conflict.stderr  configure_targets_to_build_conflict.toml  configure_targets_to_build_multi.stdout  configure_targets_to_build_multi.toml  configure_targets_to_build_single.stdout  (+38 more)
tests/cmd/config_file_empty.out/: CMakeLists.txt
tests/cmd/config_file_global_only.in/: cm.rc
tests/cmd/config_file_subcommand.in/: cm.rc
tests/skel/: skel.toml
util/: release  scrape-values  test-dump  test-new  test-overwrite
values/: llvm_all_projects.in  llvm_all_runtimes.in  llvm_all_targets.in  llvm_all_targets_alt.in  scrape.sh
