[package]
name = "cm"
version = "0.5.0"
license = "MIT"
edition = "2021"
description = "Frontend for configuring/building/testing CMake projects."
build = "build.rs"

[package.metadata.deb]
maintainer = "AMD"
copyright = "AMD"
assets = [
    ["target/release/cm", "usr/bin/cm", "755"],
    ["gen/*.1", "usr/share/man/man1/", "644"],
    ["gen/cm.bash", "usr/share/bash-completion/completions/cm", "644"],
    ["gen/cm.fish", "usr/share/fish/vendor_completions.d/cm", "644"],
    ["gen/_cm", "usr/share/zsh/vendor-completions/_cm", "644"],
]

[build-dependencies]
clap = { version = "4.5.41", features = ["env", "derive", "wrap_help", "color"] }
clap_complete = "4.5.55"
clap_mangen = "0.2.28"

[dependencies]
clap = { version = "4.5.41", features = ["env", "derive", "wrap_help", "color"] }
regex = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
shell-quote = "0.7.1"

[dev-dependencies]
trycmd = "0.15.10"
